--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+
+    <link id="thisLink" rel="icon" href="./images/icons/kisspng-morty-smith-rick-sanchez-drawing-fan-art-cartoon-rick-and-morty-5ac220ac73e954.5876699115226717884748.png" type="images/gif" sizes="16x16">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <link href="./css/index.css" rel="stylesheet">
     <link href="./css/animations.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Michroma&display=swap" rel="stylesheet">
-    <link id="thisLink" rel="icon" href="./images/icons/kisspng-morty-smith-rick-sanchez-drawing-fan-art-cartoon-rick-and-morty-5ac220ac73e954.5876699115226717884748.png" type="images/gif" sizes="16x16">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Rick and Morty</title>
@@ -22,9 +20,11 @@
         </div>
         <div class="nav-options hide-me">
             <ul>
-                <li>Characters</li>
-                <li>Location</li>
-                <li>Episodes</li>
+                <li><a href="#top">Home</a></li>
+                <li><a href="#char">Characters</a></li>
+                <li><a href="#epi">Episodes</a></li>
+                <li><a href="#loc">Location</a></li>
+
             </ul>
             <div class="search-group">
                 <div class="input-group">
@@ -39,30 +39,52 @@
             <input id="search_submit" type="submit">
         </form>
     </div>
-    <div id="first-cont" class="container">
-        <div class="tv">
-            <video controls>
-                <source src="/images/video/Rick and Morty Season 4 Release Date  Rick and Morty  Adult Swim.mp4">
-            </video>
+
+    <div id="first-cont" class="parallax-window container">
+        <div id="char-infobox" class="hide-me">
+            <div id="char-info-area">
+                <button id="char-info-close"><i class="fa fa-window-close" aria-hidden="true"></i></button>
+                <div id="info-here"></div>
+            </div>
+        </div>
+        <div class="grid-container">
+            <div class="left">
+                <p class="cursive"> November 2019</p>
+                <video controls>
+                    <source src="./images/video/Rick and Morty Season 4 Release Date  Rick and Morty  Adult Swim.mp4">
+                </video>
+            </div>
+            <div class="right">
+                <p class="cursive">Rick and Morty <br> Characters</p>
+                <div class="right-char-cont">
+                </div>
+            </div>
         </div>
     </div>
-    <div id="second-cont" class="container">
 
 
-    </div>
+    <a name="char">
+        <div id="characters" class="parallax-window-2 container"></div>
+    </a>
+
+    <a name="epi">
+        <div id="episodes" class="container"></div>
+    </a>
+    <a name="loc">
+        <div id="location" class="container"></div>
+    </a>
 
 
 
 
-
-
-
-
-
-
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="./js/parallax.js-1.5.0/parallax.js"></script>
+    <script src="./js/quotesApi.js"></script>
     <script src="./js/api.js"></script>
     <script src="./js/characters.js"></script>
     <script src="./js/design.js"></script>
+    <script src="./js/location.js"></script>
     <script src="./js/app.js"></script>
 </body>
 
