--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </div>
         <div class="nav-options hide-me">
             <ul class="custom-border-nav">
-                <li><a href="#top">Home</a></li>
-                <li><a href="#char">Characters</a></li>
-                <li><a href="#epi">Episodes</a></li>
-                <li><a href="#loc">Location</a></li>
+                <li><a href="#first-cont">Home</a></li>
+                <li><a href="#characters">Characters</a></li>
+                <li><a href="#episodes">Episodes</a></li>
+                <li><a href="#location">Location</a></li>
             </ul>
             <div class="search-group">
                 <div class="input-group">
@@ -64,39 +64,24 @@
     </div>
 
 
-    <a name="char">
-        <div id="characters" class="container">
-            <div class="char-filter">
-                <label class="ubuntu" for="filter-loc">Location: </label>
-                <select class="filter-loc pixel">
-                    <option>
-                       LOCATIONS
-                    </option>
-                </select>
-                <label class="ubuntu" for="filter-epi ">Episodes: </label>
-                <select class="filter-epi pixel">
-                        <option>
-                           EPISODES
-                        </option>
-                </select>
-            </div>
-            <div class="char-search">
-                <h1>Find: </h1>
-            </div>
-            <div class="char-cont"></div>
+
+    <div id="characters" class="container">
+        <div class="char-filter">
+
         </div>
-    </a>
+        <div class="char-search">
 
-    <a name="epi">
-        <div id="episodes" class="container"></div>
-    </a>
-    <a name="loc">
-        <div id="location" class="container"></div>
-    </a>
+        </div>
+        <div class="char-cont"></div>
+    </div>
 
 
 
+    <div id="episodes" class="container"></div>
+    <div id="location" class="container"></div>
 
+
+    <!--SCRIP -->
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="./js/parallax.js-1.5.0/parallax.js"></script>
