--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 
 
     <div id="characters" class="container">
-        <div class="char-filter">
-
+        <div class="char-cont">
+            <div class="char-filter"></div>
+            <div class="char-search"></div>
+            <div class="char-disp-area">
+                <div class="char-here"></div>
+            </div>
         </div>
-        <div class="char-search">
-
-        </div>
-        <div class="char-cont"></div>
     </div>
 
 
