modified job done!

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul class="custom-border-nav">
                 <li><a href="#first-cont">Home</a></li>
                 <li><a href="#characters">Characters</a></li>
-                <li><button class="playSound"><a href="#evil-morty">Hey Rick, </a></button></li>
+                <li><a class="playSound">Hey Rick</a></li>
             </ul>
         </div>
     </nav>
